; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_random.c_randomize_range.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_random.c_randomize_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @randomize_range(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = load i64, i64* %6, align 8
  %10 = load i64, i64* %7, align 8
  %11 = sub i64 %9, %10
  %12 = load i64, i64* %5, align 8
  %13 = sub i64 %11, %12
  store i64 %13, i64* %8, align 8
  %14 = load i64, i64* %6, align 8
  %15 = load i64, i64* %5, align 8
  %16 = load i64, i64* %7, align 8
  %17 = add i64 %15, %16
  %18 = icmp ule i64 %14, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %3
  store i64 0, i64* %4, align 8
  br label %27

20:                                               ; preds = %3
  %21 = call i64 (...) @get_random_int()
  %22 = load i64, i64* %8, align 8
  %23 = urem i64 %21, %22
  %24 = load i64, i64* %5, align 8
  %25 = add i64 %23, %24
  %26 = call i64 @PAGE_ALIGN(i64 %25)
  store i64 %26, i64* %4, align 8
  br label %27

27:                                               ; preds = %20, %19
  %28 = load i64, i64* %4, align 8
  ret i64 %28
}

declare dso_local i64 @PAGE_ALIGN(i64) #1

declare dso_local i64 @get_random_int(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
